Updated Jupyter Notebook

--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -135,7 +135,7 @@
    "source": [
     "# Mars Image to be scraped\n",
     "jpl_nasa_url = \"https://spaceimages-mars.com/\"\n",
-    "browser.visit(images_url)\n",
+    "browser.visit(jpl_nasa_url)\n",
     "html = browser.html\n",
     "images_soup = BeautifulSoup(html, 'html.parser')"
    ]
